Fix height issue of homepage items on mobile

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -23,6 +23,7 @@
 @media all and (max-width: 450px) {
   .container {
     flex-direction: column;
+    flex-wrap: nowrap;
   }
 
   .post {
